Bug 1242173 - Typing in input fields does not visually update r=